tests/fixtures/invalid/field_access_multi_variant.gcl
// Error: field access on multi-variant type (should use match instead)
pub type ManeuverKind {
    Impulsive(delta_v: Velocity),
    Coasting,
}

param m: ManeuverKind = Coasting;

node v: Velocity = @m.delta_v;
